syntax = "proto3";

package netsvr.topicUniqIdsReq;

option go_package = "internal/protocol;protocol";

//business向worker请求，获取网关中的主题包含的uniqId
message TopicUniqIdsReq {
  //worker会将该值赋给router.Cmd
  int32  routerCmd = 1;
  //worker会原样回传给business
  bytes ctxData = 2;
  //目标主题
  string topic = 3;
}