syntax = "proto3";

package netsvr.topicUniqIdsResp;

import "reCtx.proto";

option go_package = "internal/protocol;protocol";

//worker响应business，返回网关中的主题包含的uniqId
message TopicUniqIdsResp {
  //req（request）、resp（response）时候的上下文，worker会原样回传给business
  netsvr.reCtx.ReCtx reCtx = 1;
  //当前主题
  string topic = 2;
  //包含的uniqId
  repeated string uniqIds = 3;
}